# SpritesEngine

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
Libraries/glad/include/glad/: glad.h
Libraries/glad/src/: glad.c
Libraries/stb/: CMakeLists.txt
SpritesEngine/: CMakeLists.txt  Glew_version  Sample.txt  SpritesEngine.cpp  shader_s.h
SpritesEngine/res/shaders/: fragTexture.glsl
shaders/: shader.frag  shader.vert
